# Cortex

./: .gitignore  BENCHMARKS.md  BENCHMARKS_V2_5_2.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.4.0_BETA_RELEASE.md  REQUIREMENTS.md  USAGE_REFERENCE.md  bench.sh  install.ps1  install.sh
.github/workflows/: build.yml  multi-build.yml  multi-test.yml  one-liner-test.yml
docs/benchmarks/: v2.5.2.md
docs/legacy/: architecture.md  binary_format.md  design_goals.md
examples/autogen-agent/: cortex.yaml  main.py
examples/bloom-agent/: cortex.yaml  main.py
examples/crewai-agent/: cortex.yaml  main.py
examples/custom-agent/: cortex.yaml  main.py
examples/go-http-server/: cortex.toml  cortex_manifest.json  go.mod  main.go
examples/java-spring-boot/: cortex.toml  pom.xml
examples/java-spring-boot/src/main/java/com/example/demo/: Main.java
examples/javascript-express-server/: cortex.toml  index.js  package.json
examples/langgraph-agent/: cortex.yaml  main.py
examples/maggie_agi/: cortex.toml
examples/ruby-sinatra-api/: cortex.toml  main.rb
examples/rust-actix-web/: Cargo.toml  cortex.toml  cortex_manifest.json
examples/rust-actix-web/src/: main.rs
examples/scrapper/: !LOGFILE!  README.md  cortex.toml  extract_requirements_from_venv.py  pyproject.toml  repomix-output.xml  requirements.txt  run_overnight.bat  test.py
examples/scrapper/modern_env/: pyvenv.cfg
examples/scrapper/modern_env/Scripts/: activate  activate.bat  dumppdf.py  find_similar_images.py  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  pdf2txt.py  undill
examples/scrapper/src/: fashion_data_20250902_001145.tsv  fashion_data_20250902_001150.tsv  recovery.py
examples/scrapper/src/scrapper/: crew.py  main.py
examples/scrapper/src/scrapper/config/: __init__.py  agents.yaml  crew.yaml  tasks.yaml
examples/scrapper/src/scrapper/tools/: custom_tool.py  dataset_tools.py  huggingface_downloader.py  image_processing_tools.py  kaggle_downloader.py  llama_tools.py  metadata_tools.py  scrape_tools.py  search_tools.py  url_validator.py
examples/scrapper/src/scrapper/utils/: data_export.py  duplicate_checker.py
examples/security_test/: cortex.yaml  cortex_manifest.json  security_verify.sh
examples/smolagents-agent/: cortex.yaml  main.py
examples/typescript-express/: cortex.toml  cortex_manifest.json  package-lock.json  package.json
examples/typescript-express/src/: index.ts
rust/: Cargo.toml  brainstorming_cortex_2_0.md  cortex_bloom_consensus.py
rust/cortex-bundler/: Cargo.toml
rust/cortex-bundler/src/: lib.rs
rust/cortex-cli/: Cargo.toml
rust/cortex-cli/src/: main.rs
rust/cortex-cli/tests/: cli_tests.rs
rust/cortex-core/: Cargo.toml
rust/cortex-core/src/: hardware.rs  lib.rs  memory.rs
rust/cortex-runtime/: Cargo.toml
rust/cortex-runtime/examples/: fuzz_manifest.rs  perf_bench.rs  torture_concurrency.rs
rust/cortex-runtime/src/: crypto.rs  evaluation.rs  executor.rs  inspect.rs  k8s.rs  kv_cache.rs  lib.rs  mcp.rs  network.rs  parallel.rs  sandbox.rs  secrets.rs  session.rs  shm.rs  tokenizer.rs
rust/sample_agent/: main.py
rust/tests/: adversarial_arena.py  cross_os_e2e.sh  gravity_chamber.sh
rust/tests/cuda_mock/: cortex.toml  main.py  requirements.txt
