[workspace]
members = [
    "cortex-cli",
    "cortex-core",
    "cortex-runtime",
    "cortex-bundler",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1" # MessagePack for fast state serialization Let's start with json/bincode then rmp
memmap2 = "0.9" # Zero-copy memory mapping
rusqlite = { version = "0.31", features = ["bundled"] } # Embedded state layer
zstd = "0.13" # Bundle compression / state compression matching Mojo
clap = { version = "4.5", features = ["derive"] } # CLI routing
pyo3 = { version = "0.24", features = ["auto-initialize", "abi3-py311"] } # Python embedding
reqwest = { version = "0.12", features = ["json"] } # API calling for Bloom/etc
tokio = { version = "1.43", features = ["full"] } # Async runtime
tracing = "0.1" # Observability
tracing-subscriber = "0.3"
tar = "0.4.43"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
dirs = "5.0"
thiserror = "1.0"
sysinfo = "0.33"
chrono = "0.4"
nix = { version = "0.29", features = ["process", "sched", "signal", "mman", "fs"] }
