[package]
name = "cortex-bundler"
version = "1.1.2"
edition = "2021"

[dependencies]
cortex-core = { path = "../cortex-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = "1.12.3"
walkdir = "2.5.0"
