[package]
name = "cortex-core"
version = "2.5.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.31.2"
raw-cpuid = "11.1.0"
memmap2 = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
