[package]
name = "cortex-runtime"
version = "2.2.2"
edition = "2021"

[dependencies]
cortex-core = { path = "../cortex-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
pyo3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
memmap2 = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = "0.8"
serde_json = { workspace = true }

[target."cfg(unix)".dependencies]
libc = "0.2"

